--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git extension-webm https://github.com/KadeDev/extension-webm
-          haxelib run lime rebuild extension-webm windows
+          haxelib run lime rebuild extension-webm linux
           haxelib install hxcpp-debug-server
           haxelib install actuate
           haxelib list
@@ -140,7 +140,7 @@ jobs:
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
           haxelib git extension-webm https://github.com/KadeDev/extension-webm
-          haxelib run lime rebuild extension-webm windows
+          haxelib run lime rebuild extension-webm mac
           haxelib install hxcpp-debug-server
           haxelib install actuate
           haxelib list
